RESOLVED FIXED274510
[TextureMapper] BitmapTexture::create should not change the bound texture
https://bugs.webkit.org/show_bug.cgi?id=274510
Summary [TextureMapper] BitmapTexture::create should not change the bound texture
Carlos Garcia Campos
Reported 2024-05-22 01:39:41 PDT
When creating a new texture we should keep the previously bound texture.
Attachments
Carlos Garcia Campos
Comment 1 2024-05-22 01:45:58 PDT
EWS
Comment 2 2024-05-22 04:48:02 PDT
Committed 279120@main (19f5b8907ca4): <https://commits.webkit.org/279120@main> Reviewed commits have been landed. Closing PR #28904 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-05-22 04:49:14 PDT
Note You need to log in before you can comment on or make changes to this bug.