[TextureMapper] BitmapTexture::create should not change the bound texture https://bugs.webkit.org/show_bug.cgi?id=274510

Reviewed by Miguel Gomez.

When creating a new texture we should keep the previously bound texture.

* Source/WebCore/platform/graphics/texmap/BitmapTexture.cpp:
(WebCore::BitmapTexture::BitmapTexture):

Canonical link: https://commits.webkit.org/279120@main